--- a/src/main/resources/com/example/egyptian_league_management_system/welcomePage.fxml
+++ b/src/main/resources/com/example/egyptian_league_management_system/welcomePage.fxml
@@ -5,37 +5,9 @@
 <?import javafx.scene.paint.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0"
-            style="-fx-background-image: url('EPL.jpg'); -fx-background-size:stretch ;       -fx-background-position: center center; -fx-background-repeat: no-repeat;"
-            xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.example.egyptian_league_management_system.WelcomePageController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-image: url('EPL.jpg'); -fx-background-size:stretch ;       -fx-background-position: center center; -fx-background-repeat: no-repeat;" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.egyptian_league_management_system.WelcomePageController">
 
-    <Button alignment="TOP_CENTER" layoutX="243.0" layoutY="345.0" mnemonicParsing="false" onAction="#startBtnClick"
-            prefHeight="25.0" prefWidth="101.0" text="Start" textAlignment="CENTER" wrapText="true">>
-        <font>
-            <Font name="System Bold Italic" size="17.0"/>
-        </font>
-        <textFill>
-            <LinearGradient endX="0.8359621210429194" endY="0.9684542571708608" startX="0.4132491635975401"
-                            startY="0.34069400630914826">
-                <stops>
-                    <Stop>
-                        <color>
-                            <Color/>
-                        </color>
-                    </Stop>
-                    <Stop offset="0.3631356966084559">
-                        <color>
-                            <Color red="1.0" green="0.20061728358268738" blue="0.20061728358268738"/>
-                        </color>
-                    </Stop>
-                    <Stop offset="1.0">
-                        <color>
-                            <Color red="0.05263157933950424" green="0.026640675961971283" blue="0.026640675961971283"/>
-                        </color>
-                    </Stop>
-                </stops>
-            </LinearGradient>
-        </textFill>
-    </Button>
+    <Button fx:id="startBtn"  layoutX="243.0" layoutY="345.0" onAction="#startBtnClick" prefHeight="25.0" prefWidth="101.0" styleClass="button-73" text="Start" />
+
+
 </AnchorPane>
