--- a/src/main/resources/com/example/egyptian_league_management_system/additionalManagement.fxml
+++ b/src/main/resources/com/example/egyptian_league_management_system/additionalManagement.fxml
@@ -16,7 +16,7 @@
         </font>
     </Button>
 
-    <Button alignment="CENTER" layoutX="311.0" layoutY="187.0" mnemonicParsing="false" onAction="#onTopGKByCleanSheetClick" prefHeight="38.0" prefWidth="268.0" styleClass="button-73" text="Top (3) G.K by (clean sheet)" textAlignment="CENTER" wrapText="true">
+    <Button alignment="CENTER" layoutX="311.0" layoutY="187.0" mnemonicParsing="false" onAction="#onTopGKByCleanSheetClick" prefHeight="38.0" prefWidth="268.0" styleClass="button-73" text="Top (3) G.K by (C.Sheets)" textAlignment="CENTER" wrapText="true">
         <font>
             <Font size="17.0" />
         </font>
@@ -40,7 +40,7 @@
         </font>
     </Button>
 
-    <Label fx:id="infoLabel" layoutX="50.0" layoutY="295.0" prefHeight="62.0" prefWidth="500.0" text="" textAlignment="CENTER">
+    <Label fx:id="infoLabel" layoutX="50.0" layoutY="289.0" prefHeight="71.0" prefWidth="500.0" text="" textAlignment="CENTER">
         <textFill>
             <LinearGradient cycleMethod="REPEAT" endX="1.0" endY="1.0">
                 <stops>
@@ -68,7 +68,7 @@
             <Font size="17.0" />
         </font>
     </Button>
-   <Button layoutX="21.0" layoutY="242.0" mnemonicParsing="false" onAction="#onMatchOnCertainDateClick" prefHeight="38.0" prefWidth="268.0" text="Match on a certain date">
+   <Button layoutX="21.0" layoutY="242.0" mnemonicParsing="false" onAction="#onMatchOnCertainDateClick" prefHeight="38.0" prefWidth="268.0" styleClass="button-73" text="Match on a certain date">
       <font>
          <Font size="17.0" />
       </font>
@@ -100,5 +100,5 @@
             </LinearGradient>
         </textFill>
     </Label>
-   <DatePicker fx:id="datePicker" layoutX="311.0" layoutY="242.0" prefHeight="38.0" prefWidth="268.0" promptText="enter match date " />
+   <DatePicker fx:id="datePicker" layoutX="311.0" layoutY="242.0" prefHeight="38.0" prefWidth="268.0" promptText="enter match date " styleClass="button-73" />
 </AnchorPane>
