--- a/src/main/resources/com/example/egyptian_league_management_system/matchesManagement.fxml
+++ b/src/main/resources/com/example/egyptian_league_management_system/matchesManagement.fxml
@@ -5,30 +5,30 @@
 <?import javafx.scene.paint.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-image: url('epl.jpg'); -fx-background-size: stretch; -fx-background-position: center center; -fx-background-repeat: no-repeat;" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.egyptian_league_management_system.Controllers.TeamsManagementController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-image: url('epl.jpg'); -fx-background-size: stretch; -fx-background-position: center center; -fx-background-repeat: no-repeat;" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.egyptian_league_management_system.Controllers.MatchesManagementController">
 
 
     <Button layoutX="7.0" layoutY="364.0" mnemonicParsing="false" onAction="#onBackClick" prefHeight="26.0" prefWidth="66.0" styleClass="button-7" text="Back" wrapText="true" />
 
-    <Button alignment="CENTER" layoutX="21.0" layoutY="143.0" mnemonicParsing="false" onAction="#onUpdateTeamInformationClick" prefHeight="38.0" prefWidth="268.0" styleClass="button-73" text="Update a certain match" textAlignment="CENTER" wrapText="true">
+    <Button alignment="CENTER" layoutX="21.0" layoutY="143.0" mnemonicParsing="false" onAction="#onUpdateCertainMatchClick" prefHeight="38.0" prefWidth="268.0" styleClass="button-73" text="Update a certain match" textAlignment="CENTER" wrapText="true">
         <font>
             <Font size="17.0" />
         </font>
     </Button>
 
-    <Button alignment="CENTER" layoutX="311.0" layoutY="85.0" mnemonicParsing="false" onAction="#onDisplayTeamInformationClick" prefHeight="38.0" prefWidth="268.0" styleClass="button-73" text="Display  matches with details" textAlignment="CENTER" wrapText="true">
+    <Button alignment="CENTER" layoutX="311.0" layoutY="85.0" mnemonicParsing="false" onAction="#onDisplayMatchesDetailsClick" prefHeight="38.0" prefWidth="268.0" styleClass="button-73" text="Display  matches with details" textAlignment="CENTER" wrapText="true">
         <font>
             <Font size="17.0" />
         </font>
     </Button>
 
-    <Button alignment="CENTER" layoutX="21.0" layoutY="85.0" mnemonicParsing="false" onAction="#onAddNewTeamClick" prefHeight="38.0" prefWidth="268.0" styleClass="button-73" text="Enter match information" textAlignment="CENTER" wrapText="true">
+    <Button alignment="CENTER" layoutX="21.0" layoutY="85.0" mnemonicParsing="false" onAction="#onAddNewMatchClick" prefHeight="38.0" prefWidth="268.0" styleClass="button-73" text="Add new match" textAlignment="CENTER" wrapText="true">
         <font>
             <Font size="17.0" />
         </font>
     </Button>
 
-    <Button alignment="CENTER" layoutX="311.0" layoutY="143.0" mnemonicParsing="false" onAction="#onDisplayTeamDetailedScoresClick" prefHeight="38.0" prefWidth="268.0" styleClass="button-73" text="Display team scores" textAlignment="CENTER" wrapText="true">
+    <Button alignment="CENTER" layoutX="311.0" layoutY="143.0" mnemonicParsing="false" onAction="#onDisplayTeamScoresClick" prefHeight="38.0" prefWidth="268.0" styleClass="button-73" text="Display team scores" textAlignment="CENTER" wrapText="true">
         <font>
             <Font size="17.0" />
         </font>
@@ -57,7 +57,7 @@
             </LinearGradient>
         </textFill>
     </Label>
-    <Button alignment="CENTER" layoutX="166.0" layoutY="213.0" mnemonicParsing="false" onAction="#onSearchForTeamIClick" prefHeight="38.0" prefWidth="268.0" styleClass="button-73" text="Display to-be-held matches" textAlignment="CENTER" wrapText="true">
+    <Button alignment="CENTER" layoutX="142.0" layoutY="213.0" mnemonicParsing="false" onAction="#onDisplayToBeHeldMatchesClick" prefHeight="38.0" prefWidth="294.0" styleClass="button-73" text="Display to-be-held matches" textAlignment="CENTER" wrapText="true">
         <font>
             <Font size="17.0" />
         </font>
