--- a/src/main/resources/com/example/egyptian_league_management_system/team.fxml
+++ b/src/main/resources/com/example/egyptian_league_management_system/team.fxml
@@ -9,7 +9,7 @@
 <AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-image: url('epl.jpg'); -fx-background-size:stretch ;       -fx-background-position: center center; -fx-background-repeat: no-repeat;" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.egyptian_league_management_system.Controllers.TeamController">
     <Button alignment="CENTER" layoutX="7.0" layoutY="364.0" mnemonicParsing="false" onAction="#onBackClick" prefHeight="26.0" prefWidth="66.0" styleClass="button-7" text="Back" wrapText="true" />
 
-   <Label alignment="CENTER" layoutX="116.0" layoutY="14.0" prefHeight="45.0" prefWidth="368.0" text="Double Click on Team's Logo To Show Their Players" wrapText="true">
+   <Label alignment="CENTER" layoutX="101.0" layoutY="14.0" prefHeight="45.0" prefWidth="368.0" text="Click on Team's Logo To Show Their Players" wrapText="true">
       <font>
          <Font name="System Bold Italic" size="15.0" />
       </font>
